--- a/style.css
+++ b/style.css
@@ -1,54 +1,167 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background: #111;
-    font-family: 'Cinzel', serif;
-    /* font-family: 'Varela', sans-serif; */
+
+body {
+  background: #111;
+  /* font-family: 'Cinzel', serif; */
+  font-family: "Varela", sans-serif;
 }
-#logo{
-    color: white;
-    font-family: 'varela', sans-serif;
+
+#logo {
+  color: white;
+  font-size: 3rem;
+  font-family: "Cinzel", serif;
 }
-.nav-header{
-    min-height: 10vh;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    /* width: 100%; */
-    margin: 1.5rem 5rem;
+
+.nav-header {
+  min-height: 7vh;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  /* width: 100%; */
+  margin: 1.5rem 5rem;
 }
-.line1,.line2{
-    width: 3rem;
-    height: 0.2rem;
-    margin: 0.4rem;
-    background: white;
-    pointer-events: none;
+
+.line1,
+.line2 {
+  width: 3rem;
+  height: 0.2rem;
+  margin: 0.4rem;
+  background: white;
+  pointer-events: none;
 }
-.slide{
-    min-height: 100vh;
-    margin: 0 5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    background-color:#111;
+
+.slide {
+  min-height: 100vh;
+  margin: 0 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  background-color: #111;
 }
-.hero-desc{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    flex-basis: 25rem;
-    padding-left:5rem;
-    position: relative;
+
+.hero-desc {
+  /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  flex-basis: 25rem;
+  padding-left: 5rem;
+  position: relative;
 }
-.hero-img{
-    position: relative;
-    flex:1;
+
+.hero-img {
+  position: relative;
+  flex: 1;
+  flex-basis: 25rem;
+}
+
+.hero-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.fashion-span {
+  color: rgb(255, 139, 93);
+}
+.mountain-span {
+  color: rgb(86, 124, 228);
+}
+.hike-span {
+  color: rgb(167, 110, 231);
+}
+.hero-desc h2 {
+  font-family: "Cinzel", serif;
+  font-size: 3rem;
+}
+.hero-desc p {
+  padding: 2.5rem 0;
+  font-size: 1.5rem;
+  color: rgb(223, 223, 223);
+}
+.explore {
+  padding: 1rem 2rem;
+  background: none;
+  border: none;
+  color: white;
+  border: 1px solid white;
+  font-size: 1rem;
+  text-decoration: none;
+  align-self: flex-start;
+  cursor: pointer;
+}
+.nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1;
+  opacity: 1;
+  padding: 0 4rem 0 4rem;
+  clip-path: circle(50px at 100% -10%);
+  -webkit-clip-path: circle(20px at 100% -10%);
+}
+.burger {
+  cursor: pointer;
+}
+.nav-links {
+  font-size: 3rem;
+  flex-basis: 30rem;
+}
+.nav-links h3 {
+  padding: 1.5rem 0rem;
+  font-weight: 400;
+}
+.contact {
+  flex-basis: 30rem;
+}
+.contact h2 {
+  font-size: 3.5rem;
+  font-weight: 400;
+}
+.contact p {
+  font-size: 1.5rem;
+  padding: 2rem 0rem;
+  line-height: 2.2rem;
+}
+.instagram {
+  background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+.youtube {
+  color: #ff0000;
+}
+.twitter {
+  color: #00acee;
+}
+.reveal-img,
+.reveal-text {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: lightblue;
+  left: 0;
+  top: 0;
+  background: #111;
+}
+.cursor {
+  width: 3rem;
+  height: 3rem;
+  border: 2px solid white;
+  border-radius: 50%;
+  position: absolute;
 }
