--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background: #111;
   /* font-family: 'Cinzel', serif; */
   font-family: "Varela", sans-serif;
+  overflow-x: hidden;
 }
 
 #logo {
